fix: changed to fit java version